ch43/strict.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: kubebook-ch43-mesh
spec:
  mtls:
    mode: STRICT
