ch43/mesh2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client2
  namespace: kubebook-ch43-mesh2
spec:
  terminationGracePeriodSeconds: 1
  containers:
    - name: client2
      image: busybox:1.37
      command: ["sleep", "3600"]
