ch43/plain.yaml
apiVersion: v1
kind: Pod
metadata:
  name: plain
  namespace: kubebook-ch43-plain
spec:
  terminationGracePeriodSeconds: 1
  containers:
    - name: plain
      image: busybox:1.37
      command: ["sleep", "3600"]
