ch43/enc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: kubebook-ch43-enc
  labels:
    app: web
spec:
  nodeSelector:
    kubernetes.io/hostname: CLUSTER-worker
  terminationGracePeriodSeconds: 1
  containers:
    - name: web
      image: registry.k8s.io/e2e-test-images/agnhost:2.53
      args: ["netexec", "--http-port=8080"]
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: kubebook-ch43-enc
spec:
  selector:
    app: web
  ports:
    - port: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: far
  namespace: kubebook-ch43-enc
spec:
  nodeSelector:
    kubernetes.io/hostname: CLUSTER-control-plane
  tolerations:
    - operator: Exists
  terminationGracePeriodSeconds: 1
  containers:
    - name: far
      image: busybox:1.37
      command: ["sleep", "3600"]
