ch43/mesh.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: kubebook-ch43-mesh
  labels:
    app: web
spec:
  terminationGracePeriodSeconds: 1
  containers:
    - name: web
      image: registry.k8s.io/e2e-test-images/agnhost:2.53
      args: ["netexec", "--http-port=8080"]
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: kubebook-ch43-mesh
spec:
  selector:
    app: web
  ports:
    - port: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: kubebook-ch43-mesh
  labels:
    app: client
spec:
  terminationGracePeriodSeconds: 1
  containers:
    - name: client
      image: busybox:1.37
      command: ["sleep", "3600"]
